# Ventilation-System-Project

./: .gitignore  .gitmodules  CMakeLists.txt  README.md  main.cpp  test.cpp
FlaskSrv/: app.py  database.sql  readme.md
FlaskSrv/Readmes/: API-calls.md  DB-creation.md  DB-example-data.md  DB-overview.md  MQTT-Topics-readme.md
FlaskSrv/ServerImports/: credential.py  dbImports.py  mqtt.py  mqttImports.py  ventrilator.py
paho.mqtt.embedded-c/MQTTClient/src/: MQTTClient.h
readme/: MQTT-Topics-readme.md
src/: IPStack.cpp  IPStack.h  commhandler.cpp  commhandler.h  debugprint.h  dma_buffer.cpp  dma_buffer.h  eeprom.c  eeprom.h  input.cpp  input.h  logHandler.cpp  logHandler.h  menu.cpp  menu.h  modbus.cpp  modbus.h  pin.cpp  pin.h  uart_instance.h
src/JSON/: json.cpp  json.h
src/display/: font_petme128_8x8.h  framebuf.h  graphics.cpp  graphics.h  mono_vlsb.h  ssd1306.h
src/fan_controller/: fan.cpp  fan.h
src/modbus_handler/: dma_buffer.cpp  dma_buffer.h  dma_channel.cpp  dma_channel.h  modbus.cpp  modbus.h  modbus_controller.cpp  modbus_controller.h  modbus_crc.h  modbus_register.cpp  modbus_register.h  uart_instance.cpp  uart_instance.h
src/pico_hw/: dma_channel.cpp  dma_channel.h  i2c_instance.cpp  i2c_instance.h  uart_instance.cpp  uart_instance.h
src/pressure_handler/: pressure.cpp  pressure.h
vscodesettings/: launch.json  settings.json
website/: database.sql  index.html  script.js  style.css
